[gd_scene load_steps=6 format=2]

[ext_resource path="res://Characters/ScoreBoard/ScoreBoard.gd" type="Script" id=1]
[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Theme/ButtonTheme.tres" type="Theme" id=3]
[ext_resource path="res://Fonts/ButtonFont.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="ScoreBoard" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.733333 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -175.0
margin_right = 85.0
margin_bottom = -127.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"

[node name="TablePanel" type="Panel" parent="Panel"]
self_modulate = Color( 0.694118, 0.694118, 0.694118, 1 )
margin_left = 16.0
margin_top = 48.0
margin_right = 624.0
margin_bottom = 352.0
theme = ExtResource( 3 )

[node name="TableRows" type="VBoxContainer" parent="Panel/TablePanel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 592.0
margin_bottom = 288.0

[node name="TableLabel" type="HBoxContainer" parent="Panel/TablePanel/TableRows"]
margin_right = 576.0
margin_bottom = 272.0
size_flags_vertical = 3
custom_constants/separation = 30

[node name="NameLabel" type="Label" parent="Panel/TablePanel/TableRows/TableLabel"]
margin_right = 172.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "NAME"
align = 1

[node name="KillsLabel" type="Label" parent="Panel/TablePanel/TableRows/TableLabel"]
margin_left = 202.0
margin_right = 374.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "KILLS"
align = 1

[node name="KilledByLabel" type="Label" parent="Panel/TablePanel/TableRows/TableLabel"]
margin_left = 404.0
margin_right = 576.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "KILLED BY"
align = 1

[node name="RematchButton" type="Button" parent="Panel"]
margin_left = 528.0
margin_top = 10.0
margin_right = 624.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover = Color( 0.270588, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.270588, 1, 0, 1 )
text = "Rematch"

[node name="ExitButton" type="Button" parent="Panel"]
margin_left = 16.0
margin_top = 10.0
margin_right = 112.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "Exit"
[connection signal="pressed" from="Panel/RematchButton" to="." method="_on_RematchButton_pressed"]
[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_ExitButton_pressed"]
